@@ -8,7 +8,7 @@
         <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net-net-1.0" />
     </configSections>
     <log4net>
-			<logger name="mRemote.Log">
+			<logger name="mRemoteNG.Log">
 				<level value="INFO"/>
 			</logger>
 			
@@ -18,7 +18,7 @@
 			</root>
 			
 			<appender name="LogFileAppender" type="log4net.Appender.FileAppender">
-				<file value="mRemote.log" />
+				<file value="mRemoteNG.log" />
 				<!-- Example using environment variables in params -->
 				<!-- <file value="${TMP}\log-file.txt" /> -->
 				<appendToFile value="true" />
