@@ -3,6 +3,8 @@
   Fixed menu bar not staying docked to left side
   Removed snakes game Easter egg
   Removed references to visionapp Remote Desktop
+  Changed name and location of log file
+	%USERPROFILE%\Local Settings\Application Data\mRemoteNG\mRemoteNG.log
 
 1.50:
   Added the following formats to the "Save Connections As" function:
